修改了体系结构文档中Account模块

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -10,7 +10,7 @@
 ---
 ### 目录
 1、引言  
-	1.1、编织目的  
+	1.1、编制目的  
 	1.2、词汇表  
 	1.3、参考资料  
 2、产品描述  
@@ -261,354 +261,347 @@
 
 
 ### Accountbl模块的接口规范<br/>
+
+#### AccountInitService   
+期初建账相关的接口  
+AccountInitService  
+
 <table>
 <tr>
-<td colspan ="3">**提供的服务（供接口）**</td>
+	<td colspan ="3">**提供的服务（供接口）**</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.getGoodsInfo</td>
-<td>语法</td> <td>public List<GoodsVO> getGoodsInfo() </td>
+	<td rowspan="3">Accountbl.getGoodsInfo</td>
+	<td>语法</td> 
+	<td>public List<GoodsVO> getGoodsInfo() </td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td>后置条件</td> <td>返回上一财政年所有商品信息</td>
+	<td>后置条件</td> 
+	<td>返回上一财政年所有商品信息</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.getVIPInfo</td>
-<td>语法</td> <td>public List<VIPVO> getVIPInfo() </td>
+	<td rowspan="3">Accountbl.getVIPInfo</td>
+	<td>语法</td>
+	<td>public List<VIPVO> getVIPInfo() </td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td>后置条件</td> <td>返回上一财政年所有客户信息</td>
+	<td>后置条件</td>
+	<td>返回上一财政年所有客户信息</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.saveInitAccountInfo</td>
-<td>语法</td> <td>public ResultMessage saveInitAccountInfo(InitAccountVO) </td>
+	<td rowspan="3">Accountbl.saveInitAccountInfo</td>
+	<td>语法</td>
+	<td>public ResultMessage saveInitAccountInfo(InitAccountVO) </td>
 </tr>
 <tr>
-<td>前置条件</td> <td>已填写好期初建账的必要信息</td>
+	<td>前置条件</td> 
+	<td>已填写好期初建账的必要信息</td>
 </tr>
 <tr>
-<td>后置条件</td> <td>持久化保存期初建账信息，更新客户，账户，商品数据</td>
+	<td>后置条件</td> 
+	<td>持久化保存期初建账信息，更新客户，账户，商品数据</td>
 </tr>
-<tr></tr>
+</table>
+
+账户管理相关的接口  
+AccountManagementService  
+
+<table>
 <tr>
-<td rowspan="3">Accountbl.addAccount</td>
-<td>语法</td> <td>public ResultMessage initAndSaveAccount(AccountVO vo);</td>
+	<td colspan ="3">**提供的服务（供接口）**</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>财务人员已填好新账户信息</td>
+	<td rowspan="3">Accountbl.getAllAccount</td>
+	<td>语法</td> 
+	<td>public List<AccountVO> getAllAccount();</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化保存新账户信息</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.deleteAccount</td>
-<td>语法</td> <td>public ResultMessage deleteAccount(String name);</td>
+	<td>后置条件</td>
+	<td>返回所有账户的信息</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>财务人员删除账户</td>
+	<td rowspan="3">Accountbl.saveAllAccount</td>
+	<td>语法</td> 
+	<td>public void saveAllAccount(List<AccountVO> l);</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化删除帐户信息</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.modifyAccount</td>
-<td>语法</td> <td>public ResultMessage modifyAccount(AccountVO vo);</td>
+	<td>后置条件</td>
+	<td>持久化更新所有账户信息</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>财务人员修改账户信息后保存</td>
+	<td rowspan="3">Accountbl.getAccount</td>
+	<td>语法</td> 
+	<td>public AccountVO getAccount(String accountName);</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化保存账户信息</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.findAccount</td>
-<td>语法</td> <td>public List<AccountVO> findAccount();</td>
+	<td>后置条件</td>
+	<td>得到指定账户的信息</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td rowspan="3">Accountbl.updateAccount</td>
+	<td>语法</td> 
+	<td>public void updateAccount(AccountVO vo);</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有账户的列表</td>
+	<td>前置条件</td> 
+	<td>修改了账户的信息</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.newPaymentList</td>
-<td>语法</td> <td>public String newPaymentList()</td>
+	<td>后置条件</td>
+	<td>持久化保存账户信息</td>
 </tr>
+</table>
+
+财务类单据相关的接口  
+FinanceListService  
+
+<table>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td colspan ="3">**提供的服务（供接口）**</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回新付款单的单据编号</td>
+	<td rowspan="3">Accountbl.newList</td>
+	<td>语法</td> 
+	<td>public String newList()</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.newCollectionList</td>
-<td>语法</td> <td>public String newCollectionList()</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>后置条件</td>
+	<td>返回新建单据的单据编号</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回新收款单的单据编号</td>
+	<td rowspan="3">Accountbl.endService</td>
+	<td>语法</td> 
+	<td>public void endService()</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.newCashExpenseList</td>
-<td>语法</td> <td>public String newCashExpenseList()</td>
+	<td>前置条件</td> 
+	<td>结束一个填写财务类单据回合</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>后置条件</td>
+	<td>若取消一张为保存的单据，则将之持久化删除</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回新现金费用单的单据编号</td>
+	<td rowspan="3">Accountbl.delete</td>
+	<td>语法</td> 
+	<td>public DeleteListRM delete(String id)</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.openDraft</td>
-<td>语法</td> <td>public List<FinanceListVO> openDraft()</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>后置条件</td>
+	<td>持久化删除付款单数据</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有草稿单列表</td>
+	<td rowspan="3">Accountbl.save</td>
+	<td>语法</td> 
+	<td>public SaveListRM save(FinanceListVO)</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.openCollectionDraft</td>
-<td>语法</td> <td>public List<CollectionListVO> openCollectionDraft()</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>后置条件</td>
+	<td>持久化保单据数据</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有收款单的草稿单列表</td>
+	<td rowspan="3">Accountbl.commit</td>
+	<td>语法</td> 
+	<td>public CommitListRM commit(FinanceListVO vo)</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.openPaymentDraft</td>
-<td>语法</td> <td>public List<PaymentListVO> openPaymentDraft()</td>
+	<td>前置条件</td> 
+	<td>已填写好单据的必要信息</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>后置条件</td>
+	<td>提交单据并持久化保存付款单数据</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有付款单的草稿单列表</td>
+	<td rowspan="3">Accountbl.openDraft</td>
+	<td>语法</td> 
+	<td>public List<somevo extends FinanceListVO> openDraft()</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.openCashExpenseDraft</td>
-<td>语法</td> <td>public List<CashExpenseListVO> openCashExpenseDraft()</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>后置条件</td>
+	<td>返回所有草稿单</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有现金费用单的草稿单列表</td>
+	<td rowspan="3">Accountbl.openCommitted</td>
+	<td>语法</td> 
+	<td>public List<somevo extends FinanceListVO> openCommitted()</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.openCommited</td>
-<td>语法</td> <td>public List<FinanceListVO> openComitted()</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>后置条件</td>
+	<td>返回所有已提交单</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有提交过的单据列表</td>
+	<td rowspan="3">Accountbl.getList</td>
+	<td>语法</td> 
+	<td>public FinanceListVO getList(String id)</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.openPaymentCommited</td>
-<td>语法</td> <td>public List<PaymentListVO> openPaymentComitted()</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>后置条件</td>
+	<td>返回指定单据编号的单据</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有提交过的付款单列表</td>
+	<td rowspan="3">Accountbl.approve</td>
+	<td>语法</td> 
+	<td>public ApproveRM approve(FinanceListVO vo)</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.openCollectionCommited</td>
-<td>语法</td> <td>public List<CollectionListVO> openCollectionComitted()</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>后置条件</td>
+	<td>检查该单据各项数据是否正确，返回审批结果</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有提交过的收款单列表</td>
+	<td rowspan="3">Accountbl.reject</td>
+	<td>语法</td> 
+	<td>public void reject(FinanceListVO vo)</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.openCashExpenseCommited</td>
-<td>语法</td> <td>public List<CashExpenseListVO> openCashExpenseComitted()</td>
+	<td>前置条件</td> 
+	<td>无</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+	<td>后置条件</td>
+	<td>持久化更新单据，将单据设为拒绝状态</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有提交过的现金费用单列表</td>
+	<td rowspan="3">Accountbl.findAccount</td>
+	<td>语法</td> 
+	<td>public List<accountVO> findAccount()</td>
 </tr>
 <tr>
-<td rowspan="3">Accountbl.savePaymentList</td>
-<td>语法</td> <td>public ResultMessage savePaymentList(PaymentListVO)</td>
+	<td>前置条件</td> 
+	<td>启动一个收款／付款／现金费用回合</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>启动一个付款回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化保存付款单数据</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.saveCollectionList</td>
-<td>语法</td> <td>public ResultMessage saveCollectionList(CollectionListVO)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>启动一个收款回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化保存收款单数据</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.saveCashExpenseList</td>
-<td>语法</td> <td>public ResultMessage saveCashExpenseList(CashExpenseListVO)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>启动一个现金费用回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化保存现金费用单数据</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.deletePaymentList</td>
-<td>语法</td> <td>public ResultMessage deletePaymentList(String id)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化删除付款单数据</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.deleteCollectionList</td>
-<td>语法</td> <td>public ResultMessage deleteCollectionList(String id)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化删除收款单数据</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.deleteCashExpenseList</td>
-<td>语法</td> <td>public ResultMessage deleteCashExpenseList(String id)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化删除现金费用单数据</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.findVIP</td>
-<td>语法</td> <td>public List<VIPVO> findVIP(String info)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>输入会员关键字进行模糊查找</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回所有符合条件的会员列表</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.findAccount</td>
-<td>语法</td> <td>public List<accountVO> findAccount()</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>启动一个收款／付款／现金费用回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回银行账户列表</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.commitPaymentList</td>
-<td>语法</td> <td>public ResultMessage commitPaymentList(PaymentListVO vo)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>已填写好付款单信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>提交单据并持久化保存付款单数据</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.commitCollectionList</td>
-<td>语法</td> <td>public ResultMessage commitCollectionList(CollectionListVO vo)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>已填写好收款单信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>提交单据并持久化保存收款单数据</td>
-</tr>
-<tr>
-<td rowspan="3">Accountbl.commitCashExpenseList</td>
-<td>语法</td> <td>public ResultMessage commitCashExpenseList(CashExpenseListVO vo)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>已填写好现金费用单信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>提交单据并持久化保存现金费用单数据</td>
+	<td>后置条件</td>
+	<td>返回银行账户列表</td>
 </tr>
 </table>
 
 <table>
 <tr>
-<td colspan = "2">**需要的服务（需接口）**</td>
+	<td colspan = "2">**需要别的包的服务（需接口）**</td>
 </tr>
 <tr>
-<td>服务名</td> <td>服务</td>
+	<td>服务名</td> 
+	<td>服务</td>
 </tr>
 <tr>
-<td>Goods.getAllGoods()</td> <td>获取所有商品的信息</td>
+	<td>Goods.getAllGoods()</td> 
+	<td>获取所有商品的信息</td>
 </tr>
 <tr>
-<td>VIP.getAllVIP()</td> <td>获取所有客户的信息</td>
+	<td>VIP.getAllVIP()</td> 
+	<td>获取所有客户的信息</td>
 </tr>
 <tr>
-<td>AccountDataService.getBankAccountInfor(String name)</td> <td>获取银行账户信息</td>
+	<td>VIP.VIPReceivableChangeService</td> 
+	<td>改变客户应收应付</td>
 </tr>
 <tr>
-<td>AccountDataService.addBankAccountInfor(AccountPO po)</td> <td>持久化添加银行账户信息</td>
+	<td>VIP.VIPFuzzySearch()</td> 
+	<td>模糊搜索客户信息</td>
+</tr>
+</table>
+
+<table>
+<tr>
+	<td colspan = "2">**需要AccountDataService的服务（需接口）**</td>
 </tr>
 <tr>
-<td>AccountDataService.saveBankAccountInfor(AccountPO po)</td> <td>持久化保存银行账户信息</td>
+	<td>AccountDataService.getAllAccount()</td> 
+	<td>获取所有银行账户信息</td>
+</tr>
+<tr>
+	<td>AccountDataService.deleteAllAccount()</td> 
+	<td>持久化删除所有银行账户</td>
+</tr>
+<tr>
+	<td>AccountDataService.insertAccount(AccountPO po)</td> 
+	<td>持久化添加银行账户信息</td>
+</tr>
+<tr>
+	<td>AccountDataService.get(String accountName)</td> 
+	<td>获取银行账户信息</td>
+</tr>
+<tr>
+	<td>AccountDataService.update(AccountPO po)</td> 
+	<td>更新银行账户信息</td>
+</tr>
+
+<table>
+<tr>
+	<td colspan = "2">**需要FinanceListDataService的服务（需接口）**</td>
 </tr>
 <tr/>
-<td>AccountDataService.getCollectionList(String id)</td> <td>获取收款单</td>
+	<td>AccountDataService.getNewListId(String id)</td> 
+	<td>得到新单据id</td>
 </tr>
 <tr>
-<td>AccountDataService.getPaymentList(String id)</td> <td>获取付款单</td>
+	<td>AccountDataService.Insert(ListPO)</td> 
+	<td>持久化添加单据</td>
 </tr>
 <tr>
-<td>AccountDataService.getCashExpenseList(String id)</td> <td>获取现金费用单</td>
+	<td>AccountDataService.delete(String id)</td> 
+	<td>持久化删除单据</td>
 </tr>
 <tr>
-<td>AccountDataService.getDraftList()</td> <td>获取所有草稿单列表</td>
+	<td>AccountDataService.update(ListPO po)</td> 
+	<td>持久化更新单据</td>
 </tr>
 <tr>
-<td>AccountDataService.getCollectionDraftList()</td> <td>获取收款单草稿单列表</td>
+	<td>AccountDataService.getList(State)</td> 
+	<td>根据单据状态得到单据</td>
 </tr>
 <tr>
-<td>AccountDataService.getPaymentDraftList()</td> <td>获取付款单草稿单列表</td>
-</tr>
-<tr>
-<td>AccountDataService.getCahExpenseDraftList()</td> <td>获取现金费用单草稿单列表</td>
-</tr>
-<tr>
-<td>AccountDataService.InsertCollectionList()</td> <td>持久化添加收款单</td>
-</tr>
-<tr>
-<td>AccountDataService.InsertPaymentList()</td> <td>持久化添加付款单</td>
-</tr>
-<tr>
-<td>AccountDataService.InsertCashExpenseList()</td> <td>持久化添加现金费用单</td>
+	<td>AccountDataService.getList(String id)</td> 
+	<td>根据单据编号得到单据</td>
 </tr>
 </table>
 
