--- a/doc/md/详细设计文档/详细设计文档完整版V1.0.md
+++ b/doc/md/详细设计文档/详细设计文档完整版V1.0.md
@@ -662,7 +662,7 @@ listbl模块的职责及接口参见软件系统体系结构描述文档
 
 ####(2)整体结构
   
-根据体系结构的设计，我们将系统分为展示层、业务逻辑层、数据层。每一层之间为了增加灵活性和可修改性，我们会添加接口。在展示层和业务逻辑层之间，我们添加ListBLService接口。业务逻辑层和数据层之间添加ListDataService接口。为了隔离业务逻辑职责和逻辑控制职责，我们添加了ListBLServiceImpl，这样ListBLServiceImpl会将对新建的业务逻辑处理委托给accountList,presidentList,saleList,storeList,otherList对象。ListPO是作为表单（目录）类信息的持久化对象被添加到设计模型中去的。<br/>
+表单包（经过重构设计后）主要负责表单集中查看、批量审批、导出三大功能，是完全的委托式设计。每种可审批的单据在提交时向表单报注册InfoList(信息简表)。表单查看时显示InfoList。表单包对外提供Approvable接口，所有可审批单实现此接口，在批量审批时表单包根据单据类型集中调用不同的实现。此外，表单包还完成经营历程和销售明细表的查看和导出功能，需要主动获得外在数据，并将数据的计算委托给库存和销售包。自己不单独维护数据对象。<br/>
 
 Listbl 模块的详细设计类图如图4.1.4-1所示  
   
@@ -674,30 +674,29 @@ Listbl 模块的详细设计类图如图4.1.4-1所示
   
 |模块|职责|
 |----|---|
-|ListblserviceImpl|负责实现Listblservice接口所需要的表单查看、表单审批、表单导出功能，并将具体任务分派给模块内其他各类|
-|accountList|负责实现财务类单据（付款单，收款单，现金费用单）的查看、审批、导出功能|
-|presentList|负责实现库存赠送单的查看、审批、导出功能|
-|salesList|负责实现销售单、进货单、销售退货单、进货退货单的查看、审批、导出功能|
-|storeList|负责实现库存类单据（报损单、报溢单、报警单）的查看、审批、导出功能|
-|otherList|负责实现销售明细表、经营情况表的查看、审批、导出功能。|
-|message|负责实现表单审批后的消息发送功能。|
+|ListblController|负责实现Listblservice接口所需要的表单查看、表单审批、表单导出功能，并将具体任务分派给模块内其他各类|
+|InfoList_Impl|负责实现InfoList 的注册和转移   
+
 
 ####（3）模块内部类的接口规范  
   
-表4.1.4（3）-1a   listblserviceImpl类的供接口  
+表4.1.4（3）-1a   ListblController类的供接口  
 
 |服务编号|项目|内容|
 |---|---|---|
-|listblserviceImpl.approve|语法| public ResultMessage approve (ListType type，String id)|
+|listblserviceImpl.approve|语法| public ApproveRM approve(String id, GreatListType type)|
 |  |前置条件|用户选择审批某个表单|
 |  |后置条件|系统更新该表单的审批信息|
-|listblserviceImpl.openList|语法|public List<ListVO> openList(ListType type)|
-|  |前置条件|用户选择查看某类表单|
-|  |后置条件|系统显示该类表单的列表|
-|listblserviceImpl.opensingleList|语法|public ListVO openSingleList(ListType type)|
-|  |前置条件|用户选择查看销售明细表或经营情况表|
-|  |后置条件|系统显示该表单|
-|listblserviceImpl.toExcelFile|语法|public String (ListType type,String id)|
+|listblserviceImpl.saledetail|语法|public ArrayList<SalesDetailListVO> openSaleDetailList()|
+|  |前置条件|用户选择查看销售明细表|
+|  |后置条件|系统显示销售明细类表的列表|  
+|listblserviceImpl.bussinesssituation|语法|public BussinessSituationListVO openBussinessSituationList()|
+|  |前置条件|用户选择查看经营情况表|
+|  |后置条件|系统显示经营情况表|
+|listblserviceImpl.openinfoList|语法|public ArrayList<InfoListVO> openInfoList()|
+|  |前置条件|用户选择查看已经提交的表单信息简表|
+|  |后置条件|系统显示待审批表单信息简表|
+|listblserviceImpl.toExcelFile|语法|public ListRM bussinessSituationToExcel ( String path)|
 |  |前置条件|用户选择导出表单|
 |  |后置条件|系统显示导出信息（成功导出的文件地址或导出失败)|
 
@@ -705,72 +704,39 @@ Listbl 模块的详细设计类图如图4.1.4-1所示
  
 |需要的服务名|需要的服务内容|
 |---|----|
-|accountList.approve|审批财务类单据|
-|accountList.openList|打开财务类单据列表|
-|accountList.toEcelFile|导出财务类单据|
-|storeList.approve|审批库存类单据|
-|storeList.openList|打开库存类单据列表|
-|storeList.toEcelFile|导出库存类单据|
-|salesList.approve|审批销售、进货类单据|
-|salesList.openList|打开销售、进货单据列表|
-|salesList.toEcelFile|导出销售、进货类单据|
-|presentList.approve|审批赠送类单据|
-|presentList.openList|打开赠送类单据列表|
-|presentList.toEcelFile|导出赠送类单据|
-|otherList.openList|打开其他类单据列表|
-|otherList.toEcelFile|导出其他类单据|
+|SalesBussinessSituation.getSalesIncome|获取折让后销售总收入|
+|SalesBussinessSituation.getSalesDiscount|获取销售折让总额|
+|SalesBussinessSituation.getSalesReturnOutcome|获取销售退货总支出|
+|SalesBussinessSituation.getStockReturnIncome|获取进货退货总收入|
+|SalesBussinessSituation.getstockOutcome|获取进货总支出|
+|StoreBussinessSituation.getOverflowIncome|获取商品报溢收入|
+|StoreBussinessSituation.getlossOutcome|获取商品报损支出|
+|GetSalesDetails.getSalesDetail|获取销售明细数据|
 
-**由于对各类经营历程表（包括销售、赠送、库存、账户）的查看、审批、导出的具体操作非常类似，下面我们只选取财务类单据来代表这4类单据的查看、审批、导出流程。**
     
-  
+   
+ 
 
-表4.1.4（3）-2a accountList类的供接口  
+表4.1.4（3）-2a InfoListImpl类的供接口  
 
  
 |服务编号|项目|内容|  
 |----|--|---|
-|accountList.approve|语法|public ResultMessage approve (ListType type，String id)|
-|  |前置条件|用户选择审批某个账户类表单|
-|  |后置条件|系统更新该表单的审批信息|
-|accountList.openList|语法|public List<ListVO> openList(ListType type)|  
-|  |前置条件|用户选择查看账户类表单中的某类具体表单|
-|  |后置条件|系统显示该类表单的列表|
-|accountList.toExcelFile|语法|public String toExcelFile (ListType type,ListVO vo)|
-|  |前置条件|用户选择导出表单|
-|  |后置条件|系统显示导出信息（成功导出的文件地址或导出失败）|
+|InfoListImpl.register|语法|public ListRM register(InfoListVO vo)|
+|  |前置条件|提交单据|
+|  |后置条件|表单信息成功注册|
+|InfoListImpl.modify|语法|public ListRM modify(boolean b, String id)|  
+|  |前置条件|单据审批通过或被拒绝|
+
 
   
 表4.1.4（3）-2b accountList类的需接口  
 
-|需要的服务名|需要的服务内容|
-|---|---|
-|account.accountlist.openCommitted|获取已提交的账户类单据数据|
-|account.accountlist.save|保存更改后的单据信息|
-|user.message.save|向财务人员发送消息|
+不需要层内接口，层间的数据接口见体系结构设计文档。  
+
 
   
-表4.1.4（3）-3a otherList 类的供接口  
-  
-
-|服务编号 |项目|内容 |
-|-----|---|----|
-|otherList.openSingleList|语法| public ResultMessage openSingleList (ListType type，String id)|
-|  |前置条件|用户选择审批某个账户类表单|
-|  |后置条件|系统更新该表单的审批信息|
-|otherList.toExcelFile|语法|public String (ListType type,String id)|
-|  |前置条件|用户选择导出表单|
-|  |后置条件|系统显示导出信息（成功导出的文件地址或导出失败）|
-|otherList.modify|语法|public ListRM modify (ListType type , ListVO vo)|
-|  |前置条件|该单据已经在数据库中被新建并初始化|
-|  |后置条件|当发生销售等行为，系统自动对数据库中的单据数据进行修改|
-  
-  
-表4.1.4（3）-3b otherList 类的需接口
-  
-|需要的服务名|需要的服务内容|
-|-----|-----|
-|listdataservice.get|获取销售明细表、经营情况表的信息|
-|listdataservice.save|保存销售明细表、经营情况表的信息| 
+ 
   
 ####(4)业务逻辑层的动态模型
   
@@ -786,7 +752,7 @@ Listbl 模块的详细设计类图如图4.1.4-1所示
   
   
 ####（5）业务逻辑层的设计原理  
-  利用委托式控制风格，每个界面需要访问的业务逻辑由各自的控制器委托给不同领域的对象。并通过向外提供接口避免了循环依赖的问题。其他设计原理从略。
+  纯委托式控制风格，每个界面需要访问的业务逻辑由各自的控制器委托给不同领域的对象。并通过向外提供接口避免了循环依赖的问题。在InfoList的设计上利用了CommitMessage模式减小耦合。其他设计原理从略。
   
   
   
@@ -918,7 +884,7 @@ Listbl 模块的详细设计类图如图4.1.6-1所示
 ![](https://i.imgur.com/qQLCiTU.png)
   
   
-表4.1.4(2)  listbl 模块各个类的职责  
+表4.1.4(2)  storeblcontroller 模块各个类的职责  
   
 |模块|职责|
 |---|----|
