修改account模块的详细设计文档

--- a/doc/md/详细设计文档/详细设计文档完整版V1.0.md
+++ b/doc/md/详细设计文档/详细设计文档完整版V1.0.md
@@ -1115,7 +1115,7 @@ Accountbl模块的职责及接口参见软件系统体系结构描述文档
 
 Account模块的设计如图4.1.5-1 所示
 
-![](doc/md/详细设计文档/Account模块的详细设计方案.png)
+![](doc/md/详细设计文档/Account模块的详细设计方案V3.0.png)
 
 **图 4.1.5（1）-1 Accountbl模块设计模型**<br/>
 
@@ -1123,8 +1123,7 @@ Account模块的设计如图4.1.5-1 所示
 
 模块 | 职责
 ---|---
-FinanceListServiceControllor|统一控制与财务类单据相关的操作  
-FinanceList|完成与三种单据都相关的功能   
+FinanceListServiceImpl|统一控制与财务类单据相关的操作  
 AccountManagement|实现与账户管理有关的功能    
 AccountInit|完成与期初建账有关的功能  
 PaymentList|完成与付款单有关的功能  
@@ -1132,58 +1131,10 @@ CollectionList|完成与收款单有关的功能
 CashExpenseList|完成与现金费用单有关的功能  
 
 #### （3）模块内部类的接口规范
-FinanceListServiceControllor 的接口参见原型代码  
-AccountManagement  的接口参见原型代码   
-AccountInit  的接口参见原型代码 
-PaymentList，CollectionList，CashExpenseList的接口同各种单据的通用接口，详细参见体系结构描述文档   
+FinanceListServiceImpl 此类实现FinanceListService，Approvable，接口参见原型代码，    
+AccountManagement  的接口参见代码   
+PaymentList，CollectionList，CashExpenseList 三个类继承自FinanceListServiceImpl，实现各自独特的功能，参见代码
 
-表4.1.7（3）-1 Financelist  的接口规范
-
-<table>
-<tr>
-<td colspan ="3">提供的服务（供接口）</td>
-</tr>
-<tr>
-<td rowspan = "3">OpenDraft</td>
-<td>语法</td><td>public List<FinanceListVO> openDraft()</td>
-</tr>
-<tr>
-<td>前置条件</td><td> 财务人员已登陆</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回所有财务类草稿单列表</td>
-</tr>
-<tr>
-<td rowspan = "3">OpenCommitted</td>
-<td>语法</td><td>public List<FinanceListVO> openCommitted()</td>
-</tr>
-<tr>
-<td>前置条件</td><td> 财务人员已登陆</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回所有财务类已提交单列表</td>
-</tr>
-<tr>
-<td rowspan = "3">findVIP</td>
-<td>语法</td><td>public List<VIPVO> findVIP(String info)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回符合关键词的会员列表</td>
-</tr>
-<tr>
-<td rowspan = "3">findAccount</td>
-<td>语法</td><td>public List<AccountVO> findAccount()</td>
-</tr>
-<tr>
-<td>前置条件</td><td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回所有账户列表</td>
-</tr>
-</table>
 
 
 ### 4.1.8 Present 模块
