加入了一些界面层的异常数据处理

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -607,92 +607,30 @@ FinanceListService
 
 &nbsp;&nbsp;&nbsp;&nbsp; List业务逻辑层模块的接口规范如表10所示。  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表10 List业务逻辑层模块的接口规范**  
+  
 
-<table>
-<tr>
-<td colspan ="3">提供的服务（供接口）</td>
-</tr>
-<tr>
-<td rowspan="3">Listbl.checkList</td>
-<td>语法</td> <td>public ArrayList<listVO> checkList();</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统显示所有表单</td>
-</tr>
-<tr>
-<td rowspan="3">Listbl.checkSaleDetailForm</td>
-<td>语法</td> <td>public List<SaleDetailVO> checkSaleDetailForm(SaleDetailConditionVO vo);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回销售明细记录</td>
-</tr>
-<tr>
-<td rowspan="3">Listbl.checkBusinessProcessForm</td>
-<td>语法</td> <td>public Map<ListType,String> checkBusinessProcessForm(BusinessProcessConditionVO vo);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回经营历程列表</td>
-</tr>
-<tr>
-<td rowspan="3">Listbl.getSpecificList</td>
-<td>语法</td> <td>public ListVO getSpecificList(ListType type, String id);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回具体的某个单据信息</td>
-</tr>
-<tr>
-<td rowspan="3">Listbl.hongchong</td>
-<td>语法</td> <td>public void hongchong(ListType type, String id);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化保存一个生成一个一模一样但是仅仅把数量取负数的单子并入账</td>
-</tr>
-<tr>
-<td rowspan="3">Listbl.hongchongAndCopy</td>
-<td>语法</td> <td>public String hongchongAndCopy(ListType type, String id);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化保存一个生成一个一模一样但是仅仅把数量取负数的单子并入账,返回一个新的草稿单的单据编号</td>
-</tr>
-<tr>
-<td rowspan="3">Listbl.checkBusinessCircumForm</td>
-<td>语法</td> <td>public BusinessCircumVO checkBusinessCircumForm(Date begainTime, Date EndTime);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回经营情况表</td>
-</tr>
-<tr>
-<td rowspan="3">Listbl.approvalList</td>
-<td>语法</td> <td>public void approvalList(ListType type, String ID, ListVO);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化保存单据审批后结果</td>
-</tr>
-</table>
+|服务编号|项目|内容|
+|---|---|---|
+|listblservice.openInfoList|语法| public ArrayList<InfoListVO> openInfoList()|
+|  |前置条件|总经理选择表单查看|
+|  |后置条件|系统显示所有已提交的单据|  
+|listblservice.openApprovedList|语法| public ArrayList<InfoListVO> openApprovedList()|
+|  |前置条件|财务人员选择表单查看|
+|  |后置条件|系统显示所有已审批通过的单据|  
+|listblservice.openSaleDetailList|语法| public ArrayList<SalesDetailListVO> openSaleDetailList() |
+|  |前置条件|总经理或财务人员选择查看销售明细表|
+|  |后置条件|系统销售明细表|  
+|listblservice.openBussinessSituationList|语法| public BussinessSituationListVO openBussinessSituationList();|
+|  |前置条件|总经理或财务人员选择查看经营情况表|
+|  |后置条件|系统显示所经营情况表|
+|listblservice.toExcel|语法|public ListRM bussinessSituationToExcel (String path)  |
+|  |前置条件|总经理选择表单导出|
+|  |后置条件|将表单导出到指定地址|   
+|listblservice.approve|语法|public ApproveRM approve(String id,GreatListType type); |
+|  |前置条件|总经理批量审批指定类型的单据|
+|  |后置条件|修改单据数据| 
+
+
 
 <table>
 <tr>
@@ -1706,142 +1644,51 @@ FinanceListService
 
 &nbsp;&nbsp;&nbsp;&nbsp; Store业务逻辑层模块的接口规范如表16所示。  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表16 Store业务逻辑层模块的接口规范**  
+ 
+  
+|服务编号|项目|内容|
+|---|---|---|
+|storebl.openReportList|语法|public List<\ReportListVO> openReportList(ListType lt，StateType st) | 
+|  |前置条件|用户选择查看报告类单据，包括报损类、报溢类的草稿单、待审批单、通过单、未通过单|
+|  |后置条件|系统显示该类表单的列表|
+|storebl.openAlarmList|语法|public List <\AlarmListVO> openAlarmList()|
+|  |前置条件|用户选择查看报警单列表|
+|  |后置条件|系统显示该类表单的列表|
+|storebl.openPresentList|语法|public List<\PresentListVO> openPresentList(StateType st)|
+|  |前置条件|用户选择查看赠送单列表，可选择的状态为草稿单、待审批单、通过单、未通过单|
+|  |后置条件|系统显示该类表单的列表|
+|storebl.toExcelFile|语法|public String toExcel(	InventoryVO vo,String path)|
+|  |前置条件|用户选择导出当天的库存盘点，生成Excel文件|
+|  |后置条件|系统显示导出信息（成功导出的文件地址或导出失败）|
+|storebl.newList|语法|public String newList(ListType type)|
+|  |前置条件|用户选择新建单据|
+|  |后置条件|系统自动计算并返回单据编号|
+|storebl.saveReportList|语法|public ListRM saveReportList (ListType type , ListVO vo)|
+|  |前置条件|用户选择保存报损或者报溢出类单据|
+|  |后置条件|系统将该单据数据保存在草稿箱|
+|storebl.savePresentList|语法|public ListRM savePresentList ( ListVO vo)|
+|  |前置条件|用户选择保存赠送类单据|
+|  |后置条件|系统将该单据数据保存在草稿箱|
+|storebl.commit|语法|public ListRM commit (ListType type , String ID)|
+|  |前置条件|用户选择提交某类型的单据|
+|  |后置条件|系统将该单据提交，并更新单据状态为已经提交，并在表单类的已提交单据信息表中注册该单据的信息。（若该单据尚未保存在数据库，则界面层应先调用保存方法，再提交）|
+|storebl.check|语法| public storeCheckVO store_check(String begintime,String endTime)|
+|  |前置条件|用户设置查看时间段，并查看该时段的各类库存信息，具体信息项见用例文档|
+|  |后置条件|系统返回该时间段内的各类库存信息|
+|storebl.inventory|语法|public storeInventoryVO store_inventory(String day)|
+|  |前置条件|用户设置查询日期，对该天进行库存查看|
+|  |后置条件|系统返回该日的库存盘点结果|  
+|storebl.getstore|语法|public StoreVO getStoreVO(String id)|
+|  |前置条件|用户获取单个库存数据|
+|  |后置条件|系统返回该库存项数据|
+|storebl.approvePresentList|语法|public ListRM approvePresentList(PresentListVO vo,boolean b)|
+|  |前置条件|审批单个库存赠送单|
+|  |后置条件|系统显示审批结果|  
+|storebl.approveReportList|语法|public ListRM approveReportList(ReportListVO vo,boolean b)|
+|  |前置条件|审批单个库存报损报溢单|
+|  |后置条件|系统显示审批结果|  
 
-<table>
-<tr>
-<td colspan ="3">提供的服务（供接口）</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.createList</td>
-<td>语法</td><td>public ListInitVO createList(ListType type)</td>
-</tr>
-<tr>
-<td>前置条件</td><td> 无 </td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回单据编号和操作员信息</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.openDraftList</td>
-<td>语法</td><td>public Map<ListType, String> openDraftList()</td>
-</tr>
-<tr>
-<td>前置条件</td><td> 无 </td>
-</tr>
-<tr>
-<td>后置条件</td><td>打开草稿单列表</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.openList</td>
-<td>语法</td><td>public StoreListVO openList(ListType t, String id)</td>
-</tr>
-<tr>
-<td>前置条件</td><td> 无 </td>
-</tr>
-<tr>
-<td>后置条件</td><td>打开一张草稿单</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.saveList</td>
-<td>语法</td><td>public void saveList(ListType type, StoreListVO vo)</td>
-</tr>
-<tr>
-<td>前置条件</td><td> 启动一个库存赠送／报溢／报损回合 </td>
-</tr>
-<tr>
-<td>后置条件</td><td>持久化保存单据数据</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.commitList</td>
-<td>语法</td><td>public void commitList(ListType type, StoreListVO vo)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>填写完单据信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>提交单据并持久化保存单据数据</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.searchGoods</td>
-<td>语法</td><td>public Map<String,String> findGoods(String id, String name)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>启动一个库存赠送／报溢／报损回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>查询所有符合条件的商品的列表|</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.getGoods</td>
-<td>语法</td><td>public GoodsVO getGoods(String id)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>启动一个库存赠送回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回要查询的商品信息|</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.getStoreNumber</td>
-<td>语法</td><td>public int getStoreNumber(String id)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>启动一个库存报溢／报损回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回商品库存数量</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.getOverflowNumber</td>
-<td>语法</td><td>public int getOverflowNumber(int numberInReality)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>已添加商品库存数量</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回报溢数量</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.getLossNumber</td>
-<td>语法</td><td>public int getLossNumber(int numberInReality)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>已添加商品库存数量</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回报损数量</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.check</td>
-<td>语法</td><td>public Set<StoreVO> check()</td>
-</tr>
-<tr>
-<td>前置条件</td><td>启动一个库存盘点回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回当天的库存快照</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.view</td>
-<td>语法</td><td>public StoreViewVO view(StoreViewStandardVO vo, Date begin, Date end)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>启动一个库存查看回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>显示所要求的库存信息</td>
-</tr>
-<tr>
-<td rowspan = "3">Store.setAlert</td>
-<td>语法</td><td>public void setAlert(Map<String, int>)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>启动一个设置警戒数量回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>设置商品警戒数量|</td>
-</tr>
-</table>
+
 
 <table>
 <tr>
