--- a/doc/md/用例文档/用例文档.md
+++ b/doc/md/用例文档/用例文档.md
@@ -1,11 +1,18 @@
 # 进销存系统用例文档
 
-### V2.0
+### V3.0
 
 ####  By CuteGroup
 
 
 <br/><br/>
+
+## 更新历史
+| 修改人员 | 日期 | 变更原因 |
+|----|----|---|
+|高毓彬|2017.9.14|最初草稿|
+|王瑞华|2017.9.18|修改前置条件|
+|李安迪|2017.9.21|整理文档格式|
 
 ## 目录
 
@@ -32,7 +39,7 @@
 [21.查看经营情况](#21-查看经营情况)  
 [21.用户账户管理](#22-用户账户管理)  
 
-## 1. 商品分类管理
+<h2 id='1-商品分类管理'> 1. 商品分类管理</h2>
 
 id| 1 | 名称| 商品分类管理
 |---|---|---|---|
@@ -62,7 +69,7 @@ id| 1 | 名称| 商品分类管理
 扩展流程|无  
 特殊需求|只能删除没有商品的叶分类  
 
-## 2. 商品管理
+<h2 id='2-商品管理'> 2. 商品管理</h2>
 
 | ID | 2|
 |----|----|
@@ -81,7 +88,7 @@ id| 1 | 名称| 商品分类管理
 |特殊需求|１，商品价格前加人民币符号，以人民币为单位，并保留两位小数。<br>2，商品编号符合统一的编号规范。
 
 
-## 3. 库存信息查看
+<h2 id='3-库存信息查看'> 3. 库存信息查看</h2>
 
 | ID | 3 |
 |----|----|
@@ -99,7 +106,7 @@ id| 1 | 名称| 商品分类管理
 |拓展流程|1.1<br>2a、查询内容输入格式错误<br>1,系统提示查询内容格式错误并拒绝输入<br><br>1.2<br>2a 库存管理人员选择导出excel 表<br>2，系统自动将信息生成excel 文件。
 |特殊需求|１，时间段内库存数量要有合计，包括价格合计和总数合计。
 
-## 4. 库存赠送
+<h2 id='4-库存赠送'> 4. 库存赠送</h2>
 
 |用例ID| 4 |
 |--------|------|
@@ -117,7 +124,7 @@ id| 1 | 名称| 商品分类管理
 |特殊需求|1，总经理审批单据后会显示审批时间，库存管理人员在出库时必须按时间顺序操作
 
 
-## 5. 库存修正
+<h2 id='5-库存修正'> 5. 库存修正</h2>
 
 
 id| 5 | 名称| 库存修正
@@ -174,7 +181,7 @@ id| 5 | 名称| 库存修正
 	   
 
 
-## 6. 客户管理
+<h2 id='6-客户管理'> 6. 客户管理</h2>
 
 ID |6| 名称| 客户管理 
 ---|---|---|---|
@@ -193,7 +200,7 @@ ID |6| 名称| 客户管理
 
 
 
-## 7. 进货
+<h2 id='7-进货'> 7. 进货</h2>
 
 ID |7| 名称| 进货 
 ---|---|---|---|
@@ -214,7 +221,7 @@ ID |7| 名称| 进货
 
 
 
-## 8. 进货退货
+<h2 id='8-进货退货'> 8. 进货退货</h2>
 
 ID |8| 名称| 进货退货 
 ---|---|---|---|
@@ -233,7 +240,7 @@ ID |8| 名称| 进货退货
 
 
 
-## 9. 销售
+<h2 id='9-销售'> 9. 销售</h2>
 
 id| 9 | 名称| 销售
 |---|---|---|---|
@@ -252,7 +259,7 @@ id| 9 | 名称| 销售
 特殊需求|单据编号格式为 XSD-yyyyMMdd-xxxxx ，后五位每天从1开始编号
 
 
-## 10. 销售退货
+<h2 id='10-销售退货'> 10. 销售退货</h2>
 
 id| 10 | 名称| 销售退货
 |---|---|---|---|
