--- a/doc/md/详细设计文档/详细设计文档完整版V1.0.md
+++ b/doc/md/详细设计文档/详细设计文档完整版V1.0.md
@@ -1,10 +1,17 @@
 ---
 # &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;灯具进销存系统
 # &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 详细设计描述文档
-# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;V1.0 正式版
+# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;V2.0 正式版
 
 ## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CuteGroup 
 ## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2017-11-14
+
+## 更新历史
+| 修改人员 | 日期 | 变更原因 |
+|----|----|---|
+|李安迪|2017.11.14|最初草稿|
+|张翔宇|2017.11.23|修改接口|
+
 ---
 ### 目录
 1、[引言](#1)  
