--- a/doc/md/需求规格文档/灯具进销存需求规格说明文档.md
+++ b/doc/md/需求规格文档/灯具进销存需求规格说明文档.md
@@ -1,4 +1,14 @@
 # 灯具进销存需求规格说明文档 V1.0
+### V2.0
+
+####  By CuteGroup
+
+## 更新历史
+| 修改人员 | 日期 | 变更原因 |
+|----|----|---|
+|高毓彬|2017.9.22|最初草稿|
+|张翔宇|2017.9.24|修改功能需求|
+
 ## 1. 引言
 
 ### 1.1 目的
