--- a/doc/md/测试用例和测试报告/测试用例套件01.md
+++ b/doc/md/测试用例和测试报告/测试用例套件01.md
@@ -1,4 +1,4 @@
-# 测试用例套件一 #
+\# 测试用例套件一 #
 ## 制作者：王瑞华  李安迪 ##
 套件场景描述：  
 某商品（以Y2型床头灯，ID 30005为例）发生了升级换代。库存管理人员需要删除原有型号的商品（Y1型床头灯，ID 20005），并将本型号的商品增加在商品列表中。由于厂家信息提供的信息不正确，库存管理人员需要查找到该商品，并对其属性信息进行修改。  同时，财务人员需要向进货商支付货款。  
@@ -10,7 +10,7 @@
   
   
 | ID | 操作| 预期结果 |
-|------------------
+|----|----|----------
 |TUS1-1.1|输入要查找的商品的正确ID|该商品的信息
 |TUS1-1.2|删除该商品|该商品被从商品列表删除
 |TUS1-2|输入要新建的商品信息，新建商品|商品新建成功并且属性被初始化
@@ -26,7 +26,7 @@
 下面是对上述10个测试用例的输入输出的描述。测试前系统中只存在商品“Y1型床头灯”，ID20005。商品“Y2型床头灯”的购买单价为500RMB，公司某银行账户的余额为100000RMB  
 
 |ID| 输入| 输出
-|---
+|---|---|---|
 |TUS1-9.1|ID：20001|找不到该商品
 |TUS1-9.2|商品名称：X3型吊灯|找不到该商品
 |TUS1-1.1|ID：20005|Y1型床头灯及其所有信息
@@ -56,8 +56,8 @@ VIP1-每满10000赠送500元代金券。
 代金券使用说明：代金券只在付款时用于抵值，不会作用于触发赠品条件的应付总额
 <br>现在假设A，B,C,D,E分别为1-5级VIP客户
 
-|-----------------
-|ID|输入|输出|
+|ID| 输入| 输出
+|---|---|---|
 |TUS1-10|A客户不使用代金券，购买150个Y2型床头灯|购买失败，库存不足
 |TUS1-11|A客户不使用代金券，购买10个Y2型床头灯|购买成功，收款10000元，公司账户余额变为60000RMB，赠送1个台灯和900元代金券。
 |TUS1-12|B客户使用1000元代金券，购买5个Y2灯和5个X灯|购买成功，收款12000元，赠券1200RMB，赠送台灯一个。库存剩余Y2型灯85个，X型灯45个，Z型灯48个。公司账户变为72000
