--- a/doc/md/测试用例和测试报告/测试用例套件02.md
+++ b/doc/md/测试用例和测试报告/测试用例套件02.md
@@ -4,7 +4,7 @@
 下面是对客户管理这一用例设置的6个测试用例，测试前系统中只存在客户“张三”，属性为：3级，张三，18888888888，南大，888888888@ERP.com,应收额度：5000。
 
 ###  客户管理 
-|| ID | 操作| 预期结果 |输入|输出|
+| ID | 操作| 预期结果 |输入|输出|
 ||---|---|---|---|---|
 ||TUS2-1|输入新客户属性，级别，姓名、电话、地址、邮编、电子邮箱、应收额度、默认业务员|新客户信息|3级，张三，18888888888，南大，888888888@iERP.com,应收额度：5000|以表格形式显示客户信息|
 ||TUS2-2|结束输入|客户信息更新|无|无|
